# karalib

./: .gitignore  Cargo.toml  README.md
crates/emk-rs/: Cargo.toml  README.md  emk-spec.md
crates/emk-rs/examples/: 000001.emk  crack.rs  dec.js  read.rs  xor_cracker.js
crates/emk-rs/src/: lib.rs  types.rs  util.rs
